// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change clear icon when using clear-icon prop 1`] = `
<i class="r-badge__wrapper r-icon r-field__clear">
</i>
`;

exports[`should render colon when using colon prop 1`] = `
<div class="r-cell__title r-field__label">
  <label id="r-field-label"
         for="r-field-input"
  >
    foo:
  </label>
</div>
`;

exports[`should render error-message slot correctly 1`] = `
<div class="r-field__error-message">
  Custom error
</div>
`;

exports[`should render extra slot correctly 1`] = `
<div class="r-cell r-field">
  <div class="r-cell__value r-field__value">
    <div class="r-field__body">
      <input type="text"
             id="r-field-input"
             class="r-field__control"
      >
    </div>
  </div>
  Extra
</div>
`;

exports[`should render input slot correctly 1`] = `
<div class="r-field__control r-field__control--custom">
  Custom Input
</div>
`;

exports[`should render label correctly when dynamically set empty label 1`] = `
<div class="r-cell__title r-field__label">
  <label id="r-field-label"
         for="r-field-input"
  >
    abc
  </label>
</div>
`;

exports[`should render label slot correctly 1`] = `
<div class="r-cell__title r-field__label">
  Custom Label
</div>
`;

exports[`should render left icon inside label when label-align is top 1`] = `
<div class="r-cell r-field r-field--label-top">
  <div class="r-cell__title r-field__label r-field__label--top">
    <div class="r-field__left-icon">
      <i class="r-badge__wrapper r-icon">
      </i>
    </div>
    <label id="r-field-label"
           for="r-field-input"
    >
      Label
    </label>
  </div>
  <div class="r-cell__value r-field__value">
    <div class="r-field__body">
      <input type="text"
             id="r-field-input"
             class="r-field__control"
             aria-labelledby="r-field-label"
      >
    </div>
  </div>
</div>
`;

exports[`should render textarea when type is textarea 1`] = `
<div class="r-cell r-field">
  <div class="r-cell__value r-field__value">
    <div class="r-field__body">
      <textarea id="r-field-input"
                class="r-field__control"
                style="height: auto;"
      >
      </textarea>
    </div>
  </div>
</div>
`;

exports[`should render word limit correctly 1`] = `
<div class="r-field__word-limit">
  <span class="r-field__word-num">
    3
  </span>
  /3
</div>
`;

exports[`should render word limit correctly when modelValue is null 1`] = `
<div class="r-cell r-field">
  <div class="r-cell__value r-field__value">
    <div class="r-field__body">
      <input type="text"
             id="r-field-input"
             class="r-field__control"
      >
    </div>
    <div class="r-field__word-limit">
      <span class="r-field__word-num">
        0
      </span>
      /3
    </div>
  </div>
</div>
`;

exports[`should render word limit correctly when modelValue is undefined 1`] = `
<div class="r-cell r-field">
  <div class="r-cell__value r-field__value">
    <div class="r-field__body">
      <input type="text"
             id="r-field-input"
             class="r-field__control"
      >
    </div>
    <div class="r-field__word-limit">
      <span class="r-field__word-num">
        0
      </span>
      /3
    </div>
  </div>
</div>
`;

exports[`should render word limit with emoji correctly 1`] = `
<div class="r-field__word-limit">
  <span class="r-field__word-num">
    2
  </span>
  /3
</div>
`;
